Changelog for Shake

    Add shakeArgsPrune and shakeArgsPruneWith
    #228, allow running cmd async by collecting the ProcessHandle
    Make getShakeOptions/processorCount of 0 return the used value
    #212, document how to get a full terminal with cmd
    #225, warn if there are no want/action statements
    #232, don't ignore phony order-only dependencies in Ninja
    #226, add escaping for GraphViz labels
    #227, add StdinBS for passing a bytestring as Stdin
    Make cmd Timeout call terminateProcess as well
0.15
    #203, make shakeFiles a directory rather than a file prefix
    #220, add getHashedShakeVersion helper
    #220, add shakeVersionIgnore to ignore version numbers
    #219, run Shakefile.hs from the shake binary
    #218, fix issues with incorrect unchanging with no digests
    #218, fix issue with ChangeModtimeAndDigest on unchanging files
    #216, work around GHC 7.10 RC3 bug 10176
    #213, add phonys, a predicate phony rule
    Add CmdTime and CmdLine results to cmd/command
    Fix parseMakefile for words with multiple escapes in them
    #205, add WithStdout, like WithStderr
    #27, add support for capturing Stdout/Stderr with bytestrings
    Add FileStdout/FileStderr to write a stream direct to a file
    #211, add Stdouterr to capture both Stdout and Stderr streams
    Require extra-1.1 (to use nubOrd)
    Generalise cmd to work with Maybe [String]
    Add unit for use with cmd
    IMPORTANT: Incompatible on disk format change
    #209, improve orderOnly dependencies
0.14.3
    Support for the filepath shipped with GHC 7.10
    Add Timeout option to command
0.14.2
    #198, add <//> operator to join FilePatterns
    #198, fix the <.> and other extension methods to work with //
0.14.1
    #196, change the links to point at http://www.shakebuild.com/
    Improve the error messages when &%> or &?> go wrong
    Normalise file patterns used by &?>
0.14
    Make FilePattern on Windows cope with all path separators